--- a/apps/jackett-vpn/config.json
+++ b/apps/jackett-vpn/config.json
@@ -5,7 +5,7 @@
   "dynamic_config": true,
   "port": 9117,
   "id": "jackett-vpn",
-  "tipi_version": 1,
+  "tipi_version": 2,
   "version": "latest",
   "categories": ["media", "utilities", "security"],
   "description": "Jackett works as a proxy server, it translates queries from apps into tracker-site-specific http queries, parses the html response, and then sends results back. Running behind Gluetun VPN for privacy and security.",
@@ -57,6 +57,33 @@
     },
     {
       "type": "text",
+      "label": "VPN > WireGuard Server Public Key",
+      "hint": "Server's public key from [Peer] section (optional for static IP)",
+      "env_variable": "JACKETT_WIREGUARD_PUBLIC_KEY"
+    },
+    {
+      "type": "text",
+      "label": "VPN > WireGuard Endpoint IP",
+      "placeholder": "217.23.3.76",
+      "hint": "Server IP from Endpoint line (optional for static IP)",
+      "env_variable": "JACKETT_WIREGUARD_ENDPOINT_IP"
+    },
+    {
+      "type": "number",
+      "label": "VPN > WireGuard Endpoint Port",
+      "placeholder": "51820",
+      "hint": "Port from Endpoint line (optional for static IP)",
+      "env_variable": "JACKETT_WIREGUARD_ENDPOINT_PORT"
+    },
+    {
+      "type": "text",
+      "label": "VPN > WireGuard Interface Address",
+      "placeholder": "10.2.0.2/32",
+      "hint": "Your assigned VPN IP from [Interface] Address (optional for static IP)",
+      "env_variable": "JACKETT_WIREGUARD_ADDRESSES"
+    },
+    {
+      "type": "text",
       "label": "VPN > OpenVPN Username",
       "env_variable": "JACKETT_OPENVPN_USER"
     },
@@ -69,6 +96,7 @@
       "type": "text",
       "label": "VPN > Server Countries",
       "placeholder": "Netherlands,United States,Japan",
+      "hint": "Ignored if static endpoint is configured",
       "env_variable": "JACKETT_SERVER_COUNTRIES"
     },
     {
