--- a/apps/jackett-vpn/config.json
+++ b/apps/jackett-vpn/config.json
@@ -5,7 +5,7 @@
   "dynamic_config": true,
   "port": 9117,
   "id": "jackett-vpn",
-  "tipi_version": 2,
+  "tipi_version": 3,
   "version": "latest",
   "categories": ["media", "utilities", "security"],
   "description": "Jackett works as a proxy server, it translates queries from apps into tracker-site-specific http queries, parses the html response, and then sends results back. Running behind Gluetun VPN for privacy and security.",
@@ -30,7 +30,8 @@
       "type": "text",
       "required": true,
       "options": [
-        {"label": "ProtonVPN", "value": "protonvpn"},
+        {"label": "ProtonVPN (Auto)", "value": "protonvpn"},
+        {"label": "ProtonVPN (Static IP)", "value": "custom"},
         {"label": "Mullvad",    "value": "mullvad"},
         {"label": "NordVPN",    "value": "nordvpn"},
         {"label": "PIA",        "value": "private internet access"},
@@ -38,7 +39,8 @@
         {"label": "Ivpn",       "value": "ivpn"},
         {"label": "Windscribe", "value": "windscribe"}
       ],
-      "env_variable": "JACKETT_VPN_SERVICE_PROVIDER"
+      "env_variable": "JACKETT_VPN_SERVICE_PROVIDER",
+      "hint": "Choose 'ProtonVPN (Static IP)' if configuring specific server endpoint below"
     },
     {
       "label": "VPN > Type",
@@ -58,28 +60,28 @@
     {
       "type": "text",
       "label": "VPN > WireGuard Server Public Key",
-      "hint": "Server's public key from [Peer] section (optional for static IP)",
+      "hint": "From [Peer] PublicKey. REQUIRED when using 'ProtonVPN (Static IP)'",
       "env_variable": "JACKETT_WIREGUARD_PUBLIC_KEY"
     },
     {
       "type": "text",
       "label": "VPN > WireGuard Endpoint IP",
       "placeholder": "217.23.3.76",
-      "hint": "Server IP from Endpoint line (optional for static IP)",
+      "hint": "From [Peer] Endpoint IP. REQUIRED when using 'ProtonVPN (Static IP)'",
       "env_variable": "JACKETT_WIREGUARD_ENDPOINT_IP"
     },
     {
       "type": "number",
       "label": "VPN > WireGuard Endpoint Port",
       "placeholder": "51820",
-      "hint": "Port from Endpoint line (optional for static IP)",
+      "hint": "From [Peer] Endpoint Port. REQUIRED when using 'ProtonVPN (Static IP)'",
       "env_variable": "JACKETT_WIREGUARD_ENDPOINT_PORT"
     },
     {
       "type": "text",
       "label": "VPN > WireGuard Interface Address",
       "placeholder": "10.2.0.2/32",
-      "hint": "Your assigned VPN IP from [Interface] Address (optional for static IP)",
+      "hint": "From [Interface] Address. REQUIRED when using 'ProtonVPN (Static IP)'",
       "env_variable": "JACKETT_WIREGUARD_ADDRESSES"
     },
     {
@@ -96,7 +98,7 @@
       "type": "text",
       "label": "VPN > Server Countries",
       "placeholder": "Netherlands,United States,Japan",
-      "hint": "Ignored if static endpoint is configured",
+      "hint": "Only used with 'ProtonVPN (Auto)' mode. Ignored with static IP config",
       "env_variable": "JACKETT_SERVER_COUNTRIES"
     },
     {
