--- a/apps/jackett-vpn/docker-compose.yml
+++ b/apps/jackett-vpn/docker-compose.yml
@@ -10,12 +10,8 @@ services:
       - VPN_SERVICE_PROVIDER=${JACKETT_VPN_SERVICE_PROVIDER}
       - VPN_TYPE=${JACKETT_VPN_TYPE}
       - WIREGUARD_PRIVATE_KEY=${JACKETT_WIREGUARD_PRIVATE_KEY}
-      - WIREGUARD_PUBLIC_KEY=${JACKETT_WIREGUARD_PUBLIC_KEY}
-      - WIREGUARD_ENDPOINT_IP=${JACKETT_WIREGUARD_ENDPOINT_IP}
-      - WIREGUARD_ENDPOINT_PORT=${JACKETT_WIREGUARD_ENDPOINT_PORT}
-      - WIREGUARD_ADDRESSES=${JACKETT_WIREGUARD_ADDRESSES}
-      - SERVER_COUNTRIES=${JACKETT_SERVER_COUNTRIES}
-      - FREE_ONLY=${JACKETT_FREE_ONLY}
+      - SERVER_COUNTRIES=${JACKETT_SERVER_COUNTRIES-Netherlands,United States,Japan}
+      - FREE_ONLY=${JACKETT_FREE_ONLY-on}
       - VPN_PORT_FORWARDING=${JACKETT_VPN_PORT_FORWARDING-off}
       - FIREWALL_ENABLED_DISABLING_IT_SHOOTS_YOU_IN_YOUR_FOOT=${JACKETT_FIREWALL-on}
       - FIREWALL_VPN_INPUT_PORTS=9117
@@ -43,6 +39,7 @@ services:
     restart: unless-stopped
     labels:
       traefik.enable: true
+      # … your existing Traefik labels …
       runtipi.managed: true
 
   jackett:
@@ -60,25 +57,40 @@ services:
       - gluetun
     restart: unless-stopped
     labels:
+      # Enable Traefik on this service
       traefik.enable: true
+
+      # Redirect HTTP → HTTPS middleware
       traefik.http.middlewares.jackett-web-redirect.redirectscheme.scheme: https
+
+      # Traefik service definition (exposes container port 9117)
       traefik.http.services.jackett.loadbalancer.server.port: 9117
+
+      # Insecure router (HTTP)
       traefik.http.routers.jackett-insecure.rule: Host(`${APP_DOMAIN}`)
       traefik.http.routers.jackett-insecure.entrypoints: web
       traefik.http.routers.jackett-insecure.service: jackett
       traefik.http.routers.jackett-insecure.middlewares: jackett-web-redirect
+
+      # Secure router (HTTPS)
       traefik.http.routers.jackett.rule: Host(`${APP_DOMAIN}`)
       traefik.http.routers.jackett.entrypoints: websecure
       traefik.http.routers.jackett.service: jackett
       traefik.http.routers.jackett.tls.certresolver: myresolver
+
+      # Local (insecure) router for LAN access
       traefik.http.routers.jackett-local-insecure.rule: Host(`jackett.${LOCAL_DOMAIN}`)
       traefik.http.routers.jackett-local-insecure.entrypoints: web
       traefik.http.routers.jackett-local-insecure.service: jackett
       traefik.http.routers.jackett-local-insecure.middlewares: jackett-web-redirect
+
+      # Local (secure) router for LAN access
       traefik.http.routers.jackett-local.rule: Host(`jackett.${LOCAL_DOMAIN}`)
       traefik.http.routers.jackett-local.entrypoints: websecure
       traefik.http.routers.jackett-local.service: jackett
       traefik.http.routers.jackett-local.tls: true
+
+      # Managed marker
       runtipi.managed: true
 
 networks:
