--- a/apps/jackett-vpn/config.json
+++ b/apps/jackett-vpn/config.json
@@ -5,7 +5,7 @@
   "dynamic_config": true,
   "port": 9117,
   "id": "jackett-vpn",
-  "tipi_version": 6,
+  "tipi_version": 7,
   "version": "latest",
   "categories": ["media", "utilities", "security"],
   "description": "Jackett works as a proxy server, it translates queries from apps into tracker-site-specific http queries, parses the html response, and then sends results back. Running behind Gluetun VPN for privacy and security.",
@@ -30,6 +30,7 @@
       "type": "text",
       "required": true,
       "options": [
+        {"label": "Custom (Static Server)", "value": "custom"},
         {"label": "ProtonVPN", "value": "protonvpn"},
         {"label": "Mullvad",    "value": "mullvad"},
         {"label": "NordVPN",    "value": "nordvpn"},
@@ -53,27 +54,65 @@
     {
       "type": "password",
       "label": "VPN > WireGuard Private Key",
+      "hint": "Your WireGuard private key",
       "env_variable": "JACKETT_WIREGUARD_PRIVATE_KEY"
     },
     {
       "type": "text",
+      "label": "VPN > Custom > Server Endpoint IP",
+      "placeholder": "1.2.3.4",
+      "hint": "Only for Custom provider - WireGuard server IP",
+      "env_variable": "JACKETT_VPN_ENDPOINT_IP"
+    },
+    {
+      "type": "number",
+      "label": "VPN > Custom > Server Endpoint Port",
+      "placeholder": "51820",
+      "hint": "Only for Custom provider - WireGuard server port",
+      "env_variable": "JACKETT_VPN_ENDPOINT_PORT"
+    },
+    {
+      "type": "password",
+      "label": "VPN > Custom > Server Public Key",
+      "hint": "Only for Custom provider - WireGuard server's public key",
+      "env_variable": "JACKETT_WIREGUARD_PUBLIC_KEY"
+    },
+    {
+      "type": "text",
+      "label": "VPN > Custom > WireGuard Addresses",
+      "placeholder": "10.2.0.2/32",
+      "hint": "Only for Custom provider - Your VPN IP address with CIDR (e.g., 10.2.0.2/32)",
+      "env_variable": "JACKETT_WIREGUARD_ADDRESSES"
+    },
+    {
+      "type": "text",
+      "label": "VPN > Custom > Pre-Shared Key (Optional)",
+      "hint": "Only for Custom provider - Optional pre-shared key for additional security",
+      "env_variable": "JACKETT_WIREGUARD_PRESHARED_KEY"
+    },
+    {
+      "type": "text",
       "label": "VPN > OpenVPN Username",
+      "hint": "Only for OpenVPN",
       "env_variable": "JACKETT_OPENVPN_USER"
     },
     {
       "type": "password",
       "label": "VPN > OpenVPN Password",
+      "hint": "Only for OpenVPN",
       "env_variable": "JACKETT_OPENVPN_PASSWORD"
     },
     {
       "type": "text",
       "label": "VPN > Server Countries",
       "placeholder": "Netherlands,United States,Japan",
+      "hint": "Only for non-Custom providers - Comma-separated country list",
       "env_variable": "JACKETT_SERVER_COUNTRIES"
     },
     {
       "type": "boolean",
       "label": "VPN > Free Only",
+      "hint": "Only for ProtonVPN - Use only free servers",
       "env_variable": "JACKETT_FREE_ONLY",
       "default": false
     },
@@ -87,6 +126,7 @@
       "type": "number",
       "label": "VPN > WireGuard MTU",
       "placeholder": "1320",
+      "hint": "Maximum Transmission Unit size for WireGuard",
       "env_variable": "JACKETT_WIREGUARD_MTU",
       "default": 1320
     },
