--- a/apps/jackett-vpn/config.json
+++ b/apps/jackett-vpn/config.json
@@ -5,7 +5,7 @@
   "dynamic_config": true,
   "port": 9117,
   "id": "jackett-vpn",
-  "tipi_version": 9,
+  "tipi_version": 10,
   "version": "latest",
   "categories": ["media", "utilities", "security"],
   "description": "Jackett works as a proxy server, it translates queries from apps into tracker-site-specific http queries, parses the html response, and then sends results back. Running behind Gluetun VPN for privacy and security.",
@@ -140,7 +140,7 @@
       "type": "boolean",
       "label": "Security > Enable DNS over TLS",
       "env_variable": "JACKETT_DNS",
-      "default": true
+      "default": false
     },
     {
       "type": "boolean",
@@ -152,19 +152,19 @@
       "type": "boolean",
       "label": "DNS Filtering > Block malicious",
       "env_variable": "JACKETT_BLOCK_MALICIOUS",
-      "default": true
+      "default": false
     },
     {
       "type": "boolean",
       "label": "DNS Filtering > Block ads",
       "env_variable": "JACKETT_BLOCK_ADS",
-      "default": true
+      "default": false
     },
     {
       "type": "boolean",
       "label": "DNS Filtering > Block surveillance",
       "env_variable": "JACKETT_BLOCK_SURVEILLANCE",
-      "default": true
+      "default": false
     },
     {
       "type": "text",
